@@ -1,3 +1,9 @@
+2001-03-05  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* readline.scm (make-readline-port): Rewrite using
+	make-line-buffered-input-port.
+	(activate-readline): Call set-buffered-input-continuation?!.
+
 2001-01-28  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* readline.scm (make-readline-port): PROMPT becomes PROMPT2 as
